--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,43 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+
+# Node modules
+node_modules/
+
+# Hardhat build artifacts
+artifacts/
+cache/
+typechain/
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# VSCode settings
+.vscode/
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Build outputs (if using React)
+dist/
+build/
+
+# Temporary files
+*.tmp
+*.swp
+
+# Coverage (if using tests)
+coverage/
+
+# Hardhat-deployed scripts (optional)
+deployments/
